kubernetes/voter-api-atlas/other/ingress-istio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: voter-ingress
  namespace: voter-api
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  tls:
  - secretName: istio-ingress-certs
  rules:
  - http:
      paths:
      - path: /candidate/.*
        backend:
          serviceName: candidate
          servicePort: 8080
      - path: /election/.*
        backend:
          serviceName: election
          servicePort: 8080
      - path: /voter/.*
        backend:
          serviceName: voter
          servicePort: 8080
